@@ -26,9 +26,8 @@
 #include <netinet/in.h>
 #include <netdb.h>
 
-#include <krb5/krb5.h>
+#include "krb5.h"
 #include <krb.h>
-
 #include "krb524.h"
 
 /*
