@@ -21,9 +21,8 @@
  */
 
 #include <stdio.h>
-#include <krb5/krb5.h>
+#include "krb5.h"
 #include <krb.h>
-
 #include "krb524.h"
 
 /*
